plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'  // Required for building a working .JAR !!!
}

group = 'com.phraselock.port'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

application {
    mainClass = 'plp.backend.Main'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

dependencies {
    implementation "io.javalin:javalin:7.2.2"

    implementation "com.fasterxml.jackson.core:jackson-databind:2.21.1"

    implementation "com.j2html:j2html:1.6.0"
    implementation "org.xerial:sqlite-jdbc:3.51.2.0"
    implementation "org.slf4j:slf4j-simple:2.0.17"

    implementation "org.eclipse.paho:org.eclipse.paho.mqttv5.client:1.2.5"

    implementation "org.json:json:20250107"
    implementation "xmlpull:xmlpull:1.1.3.1"

    // lazysodium für Psono NaCl Crypto
    implementation 'com.goterl:lazysodium-java:5.1.4'
    implementation 'net.java.dev.jna:jna:5.14.0'

    //Redis access
    implementation 'redis.clients:jedis:5.1.0'

    // KeePass KDBX4
    implementation 'org.linguafranca.pwdb:KeePassJava2:2.2.4'
    implementation 'org.linguafranca.pwdb:KeePassJava2-kdbx:2.2.4'

    // QR code generation
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'
}

shadowJar {
    archiveBaseName.set('plp-backend')
    archiveVersion.set('1.3.2')
    archiveClassifier.set('')
    mergeServiceFiles()
}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release = 21
}
